# transform_view

./: .clang-format  .gitignore  .pre-commit-config.yaml  404.html  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  index.html  new_project_from_exemplar.py  sitemap.xml  vcpkg.json
.github/: CODEOWNERS
.github/workflows/: ci_tests.yml  pre-commit-check.yml  pre-commit-update.yml  vcpkg-release.yml
assets/css/: styles.31e47836.css
assets/js/: 0e2a123a.221c48fd.js  0e2a123a.f7fdd4d6.js  0e384e19.128b7ea9.js  0e384e19.2dd4d65f.js  0e384e19.71677378.js  0e384e19.b4408307.js  17896441.d6cff75f.js  1f391b9e.63aee0b6.js  393be207.bbeb7d5b.js  393be207.ef4e3269.js  48b7e9b6.35285c47.js  48b7e9b6.615059bc.js  48b7e9b6.b75f2357.js  760.7d162861.js  99a1efd1.60d38ab4.js  99a1efd1.dc43c497.js  c3b8b0c8.947e1c41.js  c4f5d8e4.db9fcebc.js  c5311a73.30d97253.js  cfa8f6ff.8e1eabc9.js  d4844eea.6ede29cf.js  ff0ee0be.b5ab4d40.js  ff0ee0be.bc1b29a0.js  main.35110c61.js  main.386ee3c7.js  main.4b39a451.js  main.8f15734c.js  runtime~main.5cd406ed.js  runtime~main.794861e4.js  runtime~main.88ef8289.js  runtime~main.ab9e470a.js
cmake/: cxx-modules-rules.cmake  prelude.cmake
doc/: docusaurus.config.js
doc/docs/: intro.md
doc/docs/api/: beman__transform_view__transform_view-api.mdx  beman__transform_view__views__transform_impl-api.mdx
docs/api/beman__transform_view_26__transform_view-api/: index.html
docs/api/beman__transform_view_26__views__transform_impl-api/: index.html
docs/api/beman__transform_view__transform_view-api/: index.html
docs/api/beman__transform_view__views__transform_impl-api/: index.html
docs/category/api/: index.html
docs/docs/: intro.md
docs/docs/api/: _category_.json  beman__transform_view__transform_view-api.mdx  beman__transform_view__views__transform_impl-api.mdx
docs/intro/: index.html
examples/: CMakeLists.txt  identity_as_default_projection.cpp  identity_direct_usage.cpp  transform_view_direct_usage.cpp
include/beman/transform_view/: CMakeLists.txt  config.hpp  config_generated.hpp.in  transform_view.cppm  transform_view.hpp
include/beman/transform_view_26/: identity.hpp  transform_view.hpp
infra/: .beman_submodule
infra/cmake/: beman-install-library.cmake
markdown-page/: index.html
port/: portfile.cmake.in  vcpkg.json.in
src/beman/transform_view/: CMakeLists.txt  transform_view.cpp  transform_view.cppm
src/beman/transform_view_26/: CMakeLists.txt  identity.cpp  transform_view.cpp
tests/beman/transform_view/: CMakeLists.txt  module_smoke_test.test.cpp  transform_view.test.cpp
tests/beman/transform_view_26/: CMakeLists.txt  identity.test.cpp  transform_view.test.cpp
